tests/NormalTests/paczka1/fuzzy1/80513718.err
Error in line 2: BpvP832WvBO S716 28,0
Error in line 7: A424 A424 56d0
Error in line 12: Dgm8FNiy A424 71,1
Error in line 17: BpvP832WvBO S716 45,9
Error in line 16: F5C7ctlF9 A424 96,1
Error in line 8: A424 A424 233,5
Error in line 19: Dgm8FNiy S716 88,4
Error in line 26: A424 S716 30,8
Error in line 22: BpvP832WvBO A424 42,9
Error in line 30: BpvP832WvBO A326 37,5
Error in line 34: BpvP832WvBO A424 31,8
